--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Tiger Puri">
-  <meta name="description" content="Coding Assignment 5">
+  <meta name="description" content="Coding Assignment 6">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="css/style.css" rel="stylesheet" type="text/css" />
 
-  <title>Tiger Puri CA5-CSS-Layout</title>
+  <title>Tiger Puri Bear Ninja Hunter</title>
 </head>
 
 <body>
